hphp/test/slow/parser/php-reserved-name-double-1.php.expectf
Fatal error: Cannot use 'Double' as class name as it is reserved in %s/hphp/test/slow/parser/php-reserved-name-double-1.php on line 6